After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707914 - gst_buffer_unref() not required for gst_sample_get_buffer()
gst_buffer_unref() not required for gst_sample_get_buffer()
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other All
: Normal normal
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-11 14:49 UTC by Kishore Arepalli
Modified: 2013-09-24 16:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Kishore Arepalli 2013-09-11 14:49:27 UTC
diff --git a/ges/ges-pipeline.c b/ges/ges-pipeline.c
index a6d84fd..bfd8dd3 100644
--- a/ges/ges-pipeline.c
+++ b/ges/ges-pipeline.c
@@ -1102,7 +1102,6 @@ ges_pipeline_save_thumbnail (GESPipeline * self, int width, int

   gst_caps_unref (caps);
   gst_buffer_unmap (b, &map_info);
-  gst_buffer_unref (b);
   gst_sample_unref (sample);

   return res;
Comment 1 Sebastian Dröge (slomo) 2013-09-12 07:06:56 UTC
Please attach patches in the future as generated from "git format-patch" :)

commit 6c993d36ba5a838bb1f2a09d1ed1e55cf3e45ac3
Author: Kishore Arepalli <kishore.arepalli@gmail.com>
Date:   Thu Sep 12 09:05:51 2013 +0200

    ges-pipeline: Don't unref buffer obtained from a GstSample
    
    https://bugzilla.gnome.org/show_bug.cgi?id=707914