ges-pipeline: Don't unref buffer obtained from a GstSample

https://bugzilla.gnome.org/show_bug.cgi?id=707914